fixed java warning